# CoffeeBench

./: .env.example  LOCAL_SETUP.md  README.md  download_models.py  pyproject.toml  setup_gpu.sh  test_local_models.py
coffeebench/: checkpoint.py  main.py
coffeebench/models/: __init__.py  _retry.py  anthropic_model.py  local_model.py  openai_model.py
docs/: CHECKPOINT_USAGE.md  DEBUG_API_CALLS.md  GPU_SETUP.md  INTENEXT_SETUP.md  MODEL_RECOMMENDATIONS.md
experiments/: roaster_focal_llama.toml  roaster_focal_llama_3b.toml  roaster_focal_llama_70b_awq.toml  roaster_focal_llama_8b.toml  roaster_focal_mistral_small.toml  roaster_focal_qwen.toml  roaster_focal_qwen_14b.toml  roaster_focal_qwen_14b_30d.toml  roaster_focal_qwen_32b.toml  roaster_focal_qwen_3b.toml  roaster_focal_qwen_3b_cpu.toml  roaster_focal_qwen_7b.toml  roaster_focal_qwen_7b_30d.toml
