[project]
name = "coffeebench"
version = "0.1.0"
description = "CoffeeBench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "anthropic>=0.75.0",
    "google-adk>=1.20.0",
    "google-genai>=1.54.0",
    "hf-transfer>=0.1.9",
    "imageio>=2.37.3",
    "llama-cpp-python>=0.3.33",
    "matplotlib>=3.10.8",
    "openai-agents>=0.4.2",
    "pandas>=2.3.3",
    "torch>=2.0.0",
    "transformers>=4.40.0,<5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.3",
    "streamlit>=1.56.0",
]
local = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
]
gguf = [
    "llama-cpp-python>=0.2.0",
]
vllm = [
    "vllm>=0.6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coffeebench"]
